--- a/RQ5.html
+++ b/RQ5.html
@@ -55,7 +55,7 @@
         <td>J. Lakos. Large-scale C++ software design</td>
         <td>1996</td>
         <td><a href="cds.cern.ch/record/384832/files/9780201633627_TOC.pdf">Link</a></td>
-        <td>Defines a metric called Cumulative Component dependency (CCD), which is the sum of required  dependencies by a component within a  subsystem</td>
+        <td>Defines a metric called Cumulative Component dependency (CCD), which is the sum of required  dependencies by a component within a subsystem</td>
       </tr>
       <tr>
         <td>14</td>
@@ -103,7 +103,7 @@
         <td> R. C. Martin. Agile Software Development: Principles, patterns, and Practices</td>
         <td>2002</td>
         <td><a href="cds.cern.ch/record/1419478/files/0135974445_TOC.pdf">Link</a></td>
-        <td>defines metrics for software packages, i.e., groups of related classes (e.g., java packages, C++-  projects, low-level modules).</td>
+        <td>defines metrics for software packages, i.e., groups of related classes (e.g., java packages, C++- projects, low-level modules).</td>
       </tr>
       <tr>
         <td>21</td>
@@ -175,7 +175,7 @@
         <td>C. Sant’Anna, E. Figueiredo, A. Garcia, and C. Lucena. On the modularity of software architectures: A concern-driven measurement framework</td>
         <td>2007</td>
         <td><a href="link.springer.com/chapter/10.1007/978-3-540-75132-8_17">Link</a></td>
-        <td>Concern-driven  metrics to measure the modularity of a software system.</td>
+        <td>Concern-driven metrics to measure the modularity of a software system.</td>
       </tr>
       <tr>
         <td>12</td>
@@ -183,7 +183,7 @@
         <td>D. D. Pennington, I. N. Athanasiadis, S. Bowers, S. Krivov, J. Madin, M. Schildhauer, and F. Villa, “Indirectly driven knowledge modelling in ecology,”</td>
         <td>2008</td>
         <td><a href="citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.714.4200&amp;rep=rep1&amp;type=pdf">Link</a></td>
-        <td>entity-relationship  modeling , as means to represent their data, knowledge, or information models</td>
+        <td>entity-relationship modeling, as means to represent their data, knowledge, or information models</td>
       </tr>
       <tr>
         <td>21</td>
@@ -207,7 +207,7 @@
         <td>L. Du, “Expert control based on neural networks for controlling greenhouse environment,”</td>
         <td>2009</td>
         <td><a href="link.springer.com/chapter/10.1007/978-3-642-12220-0_20">Link</a></td>
-        <td>s. Neural networksare in use for dynamic environments and simulations</td>
+        <td> Neural networks are in use for dynamic environments and simulations</td>
       </tr>
       <tr>
         <td>12</td>
@@ -252,7 +252,7 @@
       <tr>
         <td>21</td>
         <td>Metric</td>
-        <td>K. Sethi, Y. Cai, S.  Wong, A. Garcia, and C. Sant’Anna. From retrospect to prospect: Assessing modularity and stability from software architecture</td>
+        <td>K. Sethi, Y. Cai, S. Wong, A. Garcia, and C. Sant’Anna. From retrospect to prospect: Assessing modularity and stability from software architecture</td>
         <td>2009</td>
         <td><a href="ieeexplore.ieee.org/abstract/document/5290817/">Link</a></td>
         <td> metrics such as decision volatility (i.e.,impact of environmental conditions on a design decision) and concern overlap.</td>
@@ -263,7 +263,7 @@
         <td>Lo CT, Qian K. Green computing methodology for next generation computing scientists. </td>
         <td>2010</td>
         <td><a href="ieeexplore.ieee.org/abstract/document/5676266/">Link</a></td>
-        <td>incorporatevirtualization, shutting applications which are no more being used, effectivecalculations by composing a minimal outline of codes and informationstructures, diminishment of parallelism overhead by creating proficientburden adjusting calculations, fine grained green figuring, and makingvitality assignment calculations for steering information</td>
+        <td>incorporate virtualization, shutting applications which are no more being used, effective calculations by composing a minimal outline of codes and information structures, diminishment of parallelism overhead by creating proficientburden adjusting calculations, fine grained green figuring, and making vitality assignment calculations for steering information</td>
       </tr>
       <tr>
         <td>2</td>
@@ -303,7 +303,7 @@
         <td>Ager et al. Internet map services: new portal for global ecological monitoring, or geodata junkyard?</td>
         <td>2010</td>
         <td><a href="dl.acm.org/doi/abs/10.1145/1823854.1823896">Link</a></td>
-        <td>global position  system, internet map services</td>
+        <td>global position system, internet map services</td>
       </tr>
       <tr>
         <td>14</td>
@@ -319,7 +319,7 @@
         <td>Govindasamy A. Optimization of operating systems towards green computing.</td>
         <td>2011</td>
         <td><a href="www.redalyc.org/pdf/2652/265219635005.pdf">Link</a></td>
-        <td>incorporate virtualization, shutting applications which are no more being used, effective  calculations by composing a minimal outline of codes and information structures, diminishment of parallelism overhead by creating proficient  burden adjusting calculations, fine grained green figuring, and making vitality assignment calculations for steering information</td>
+        <td>incorporate virtualization, shutting applications which are no more being used, effective calculations by composing a minimal outline of codes and information structures, diminishment of parallelism overhead by creating proficient burden adjusting calculations, fine grained green figuring, and making vitality assignment calculations for steering information</td>
       </tr>
       <tr>
         <td>2</td>
@@ -351,7 +351,7 @@
         <td>Naumann S, Dick M, Kern E, Johann T. The greensoft model: A reference model for green and sustainable software and its engineering. </td>
         <td>2011</td>
         <td><a href="www.sciencedirect.com/science/article/pii/S2210537911000473">Link</a></td>
-        <td>Greensoft model: Themodel takes into account the three-order impacts of IT on the environment aswell as the three main dimensions: environmental, social and economic. Themodel is organized into four central parts: holistic life cycle model thatconsiders product life cycle from its conception to its disposal,sustainability criteria and metrics, procedure models for differentstakeholders and tool support to carry out activities. The model includesfour general activities related to a continuous improvement cycle:sustainability reviews, process assessment, sustainability journal andsustainability retrospective </td>
+        <td>Greensoft model: The model takes into account the three-order impacts of IT on the environment as well as the three main dimensions: environmental, social and economic. The model is organized into four central parts: holistic life cycle model that considers product life cycle from its conception to its disposal,sustainability criteria and metrics, procedure models for different stakeholders and tool support to carry out activities. The model includesfour general activities related to a continuous improvement cycle: sustainability reviews, process assessment, sustainability journal and sustainability retrospective </td>
       </tr>
       <tr>
         <td>11</td>
@@ -367,7 +367,7 @@
         <td>Naumann, S., Dick,M., Kern, E., Johann, T.: The GREENSOFT Model: A reference model for greenand sustainable software and its engineering</td>
         <td>2011</td>
         <td><a href="www.sciencedirect.com/science/article/pii/S2210537911000473">Link</a></td>
-        <td>Ripple effectsconsiderations</td>
+        <td>Ripple effects considerations</td>
       </tr>
       <tr>
         <td>11</td>
@@ -375,7 +375,7 @@
         <td>Naumann, S., Dick,M., Kern, E., Johann, T.: The GREENSOFT Model: A reference model for greenand sustainable software and its engineering</td>
         <td>2011</td>
         <td><a href="www.sciencedirect.com/science/article/pii/S2210537911000473">Link</a></td>
-        <td>“Cradle-to-Grave” -optimization</td>
+        <td>“Cradle-to-Grave” - optimization</td>
       </tr>
       <tr>
         <td>12</td>
@@ -727,7 +727,7 @@
         <td>Penzenstadler, B.,Mahaux, M., &amp; Salinesi, C. (2013). RE4SuSy: Requirements Engineering for Sustainable Systems. Journal of Systems and Software</td>
         <td>2013</td>
         <td><a href="citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.415.8601&amp;rep=rep1&amp;type=pdf">Link</a></td>
-        <td>A generic model for sustainability with process and product specific stances  </td>
+        <td>A generic model for sustainability with process and product specific stances </td>
       </tr>
       <tr>
         <td>16</td>
