--- a/RQ4.html
+++ b/RQ4.html
@@ -93,9 +93,8 @@
         <option value="Communication">Communication</option>
         <option value="Energy Saving Techniques">Energy Saving Techniques</option>
         <option value="Knowledge Management">Knowledge Management</option>
-
-        <option value="Measures / Metrics">Measures / Metrics</option>
-        <option value="Reuse / Refactor">Reuse / Refactor</option>
+        <option value="Measures/Metrics">Measures/Metrics</option>
+        <option value="Reuse/Refactor">Reuse/Refactor</option>
         <option value="Security">Security</option>
         <option value="Sustainability Planning">Sustainability Planning</option>
         <option value="Efficient Coding">Efficient Coding</option>
@@ -1037,27 +1036,27 @@
         <tr><td>182</td>
           <th scope="col">[2]</th>
           <td>Try to build in-house when it is possible</td>
-          <td>Sustainable Hardware</td>
+          <td>Hardware</td>
         </tr>
         <tr><td>183</td>
           <th scope="col">[8]</th>
           <td>Choose a Green Data Center to design a Green System</td>
-          <td>Sustainable Hardware</td>
+          <td>Hardware</td>
         </tr>
         <tr><td>184</td>
           <th scope="col">[8]</th>
           <td>Choose a well-planned data center to efficiently use the cooling system</td>
-          <td>Sustainable Hardware</td>
+          <td>Hardware</td>
         </tr>
         <tr><td>185</td>
           <th scope="col">[8]</th>
           <td>Identify hardware provisioning over a period</td>
-          <td>Sustainable Hardware</td>
+          <td>Hardware</td>
         </tr>
         <tr><td>186</td>
           <th scope="col">[8]</th>
           <td>Choose high-performance desktops and laptops that use efficiently hardware technologies</td>
-          <td>Sustainable Hardware</td>
+          <td>Hardware</td>
         </tr>
         <tr><td>187</td>
           <th scope="col">[1]</th>
