--- a/RQ1.html
+++ b/RQ1.html
@@ -73,7 +73,7 @@
           <td><div class="btn btn-primary">Lifetime</div></td>
           <td>
             <div class="btn btn-danger" style="margin-bottom: 5px">Environmental impact</div>
-            <div class="btn btn-danger">energy consumption</div>
+            <div class="btn btn-danger">Energy consumption</div>
           </td>
         </tr>
 
