--- a/RQ5.html
+++ b/RQ5.html
@@ -970,7 +970,7 @@
         <td> propose an information theory based approach to define coupling and cohesion metrics. </td>
       </tr>
     </table>
-    <a href="reference.html" class="btn btn-primary">See references</a>
+    <a href="reference.html" class="btn btn-warning">See references</a>
   </div>
 
  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
