--- a/RQ1.html
+++ b/RQ1.html
@@ -30,7 +30,7 @@
       <thead class="thead-dark">
         <tr>
           <th scope="col" style="width: 20%; text-align: center;">Study</th>
-          <th scope="col">Definition</th>
+          <th scope="col" style="width: 50%; text-align: center;">Definition</th>
           <th> Improve</th>
           <th> Reduce</th>
         </tr>        
@@ -170,6 +170,7 @@
         </tbody>
       </table>
 
+      <a href="index.html" class="btn btn-warning">Return to index</a>
       <a href="reference.html" class="btn btn-warning">See references</a>
       <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
