--- a/RQ3.html
+++ b/RQ3.html
@@ -99,7 +99,7 @@
 						<td>Measures/Metrics</td>
 					</tr>
 					<tr>
-					<td>8</td>
+						<td>8</td>
 						<th scope="row">[4][13]</th>
 						<td>Filtration of requirements through green evaluator</td>
 						<td><div class="btn btn-secondary">Requirements filtering tool (green evaluator) usage</div></td>
@@ -107,7 +107,7 @@
 						<td>Measures/Metrics</td>
 					</tr>
 					<tr>
-					<td>9</td>
+						<td>9</td>
 						<th scope="row">[4][13]</th>
 						<td>Efficient estimation strategies </td>
 						<td><div class="btn btn-secondary">Estimation strategies usage</div></td>
@@ -115,7 +115,7 @@
 						<td>Measures/Metrics</td>
 					</tr>
 					<tr>
-					<td>10</td>
+						<td>10</td>
 						<th scope="row">[4][13]</th>
 						<td>Efficient resources utilization</td>
 						<td><div class="btn btn-secondary">Power and resources consumption</div></td>
@@ -123,7 +123,7 @@
 						<td>Resource Utilization</td>
 					</tr>
 					<tr>
-					<td>11</td>
+						<td>11</td>
 						<th scope="row">[4][13]</th>
 						<td>Paperless comunication</td>
 						<td><div class="btn btn-secondary">Paper usage</div></td>
@@ -131,7 +131,7 @@
 						<td>Resource Utilization</td>
 					</tr>
 					<tr>
-					<td>12</td>
+						<td>12</td>
 						<th scope="row">[4][13]</th>
 						<td>Green utilization of the software</td>
 						<td><div class="btn btn-secondary">Software utilization</div></td>
@@ -139,7 +139,7 @@
 						<td>Resource Utilization</td>
 					</tr>
 					<tr>
-					<td>13</td>
+						<td>13</td>
 						<th scope="row">[3]</th>
 						<td>Limited support for reusability</td>
 						<td><div class="btn btn-secondary">Support for reusability</div></td>
@@ -147,7 +147,7 @@
 						<td>Reuse/Refactor</td>
 					</tr>
 					<tr>
-					<td>14</td>
+						<td>14</td>
 						<th scope="row">[4][13]</th>
 						<td>Software reusability</td>
 						<td><div class="btn btn-secondary">Support for reusability</div></td>
@@ -155,7 +155,7 @@
 						<td>Reuse/Refactor</td>
 					</tr>
 					<tr>
-					<td>15</td>
+						<td>15</td>
 						<th scope="row">[19]</th>
 						<td>Use of refactoring techniques</td>
 						<td><div class="btn btn-secondary">Refactoring techniques</div></td>
@@ -163,7 +163,7 @@
 						<td>Reuse/Refactor</td>
 					</tr>
 					<tr>
-					<td>16</td>
+						<td>16</td>
 						<th scope="row">[19]</th>
 						<td>Using security applications, Incorporating an encryption element in software architecture</td>
 						<td><div class="btn btn-secondary">Security applications and encryption</div></td>
@@ -171,7 +171,7 @@
 						<td>Security</td>
 					</tr>
 					<tr>
-					<td>17</td>
+						<td>17</td>
 						<th scope="row">[19]</th>
 						<td>Filtering adware in mobile systems</td>
 						<td><div class="btn btn-secondary">Security applications and encryption</div></td>
@@ -179,7 +179,7 @@
 						<td>Security</td>
 					</tr>
 					<tr>
-					<td>18</td>
+						<td>18</td>
 						<th scope="row">[1][4]</th>
 						<td>Green and sustainable management of product life-cycle</td>
 						<td><div class="btn btn-secondary">Product life-cycle management</div></td>
@@ -187,7 +187,7 @@
 						<td>Software Shelf-Life</td>
 					</tr>
 					<tr>
-					<td>19</td>
+						<td>19</td>
 						<th scope="row">[2]</th>
 						<td>Acquisition and use fallout must be persistently assessed and enhanced</td>
 						<td><div class="btn btn-secondary">Acquisition and fallout assessing</div></td>
@@ -195,7 +195,7 @@
 						<td>Sustainability Planning</td>
 					</tr>
 					<tr>
-					<td>20</td>
+						<td>20</td>
 						<th scope="row">[2]</th>
 						<td>Attach a new form of requirements ‘Environment Requirements’ to the non functional</td>
 						<td><div class="btn btn-secondary">Addition of sustainability requirements on non-functional requirements</div></td>
@@ -203,7 +203,7 @@
 						<td>Sustainability Planning</td>
 					</tr>
 					<tr>
-					<td>21</td>
+						<td>21</td>
 						<th scope="row">[2]</th>
 						<td>Consider environment when purchase of new hardware is decided</td>
 						<td>
@@ -213,7 +213,7 @@
 						<td>Sustainability Planning</td>
 					</tr>
 					<tr>
-					<td>22</td>
+						<td>22</td>
 						<th scope="row">[2]</th>
 						<td>Run feasibility studies that asses the impact of the project on the environment</td>
 						<td><div class="btn btn-secondary">Sustainability feasibility tests</div></td>
@@ -221,7 +221,7 @@
 						<td>Sustainability Planning</td>
 					</tr>
 					<tr>
-					<td>23</td>
+						<td>23</td>
 						<th scope="row">[2]</th>
 						<td>Meet the non-functional requirements using a minimum of system resources</td>
 						<td><div class="btn btn-secondary">Power and resources consumption</div></td>
@@ -229,7 +229,7 @@
 						<td>Sustainability Planning</td>
 					</tr>
 					<tr>
-					<td>24</td>
+						<td>24</td>
 						<th scope="row">[2]</th>
 						<td>Create a standard set of ‘Environment  Requirements’ and list to be added to the non  functional requirement criteria in agreement with the client and tune the requirements based on the project being undertaken</td>
 						<td><div class="btn btn-secondary">Sustainability goals definition</div></td>
@@ -238,7 +238,7 @@
 					</tr>
 					<tr>
 
-					<td>25</td>
+						<td>25</td>
 						<th scope="row">[3]</th>
 						<td>Lack of long-term planning</td>
 						<td><div class="btn btn-secondary">Long-term planning</div></td>
@@ -246,7 +246,7 @@
 						<td>Sustainability Planning</td>
 					</tr>
 					<tr>						
-					<td>26</td>
+						<td>26</td>
 						<th scope="row">[4][13]</th>
 						<td>Green project management</td>
 						<td><div class="btn btn-secondary">Management</div></td>
@@ -254,7 +254,7 @@
 						<td>Sustainability Planning</td>
 					</tr>
 					<tr>
-					<td>27</td>
+						<td>27</td>
 						<th scope="row">[4][13]</th>
 						<td>Provision of green infrastructure</td>
 						<td><div class="btn btn-secondary">Infrastructure</div></td>
@@ -262,7 +262,7 @@
 						<td>Sustainability Planning</td>
 					</tr>
 					<tr>
-					<td>28</td>
+						<td>28</td>
 						<th scope="row">[13]</th>
 						<td>Focused by time-to-market force and are often less conversant about green software practices and techniques</td>
 						<td><div class="btn btn-secondary">Familiarization with sustainable software development techniques</div></td>
@@ -270,7 +270,7 @@
 						<td>Sustainability Planning</td>
 					</tr>
 					<tr>
-					<td>29</td>
+						<td>29</td>
 						<th scope="row">[16]</th>
 						<td>High importance of concrete sustainability goals</td>
 						<td><div class="btn btn-secondary">Sustainability goals definition</div></td>
@@ -278,7 +278,7 @@
 						<td>Sustainability Planning</td>
 					</tr>
 					<tr>
-					<td>30</td>
+						<td>30</td>
 						<th scope="row">[2]</th>
 						<td>Shift to writing energy efficient codes that minimize the use of system resources</td>
 						<td>
@@ -289,7 +289,7 @@
 						<td>Sustainable Coding</td>
 					</tr>
 					<tr>
-					<td>31</td>
+						<td>31</td>
 						<th scope="row">[4][13]</th>
 						<td>Green graphical user interface</td>
 						<td><div class="btn btn-secondary">Graphical user interface</div></td>
@@ -297,7 +297,7 @@
 						<td>Sustainable Coding</td>
 					</tr>
 					<tr>
-					<td>32</td>
+						<td>32</td>
 						<th scope="row">[19]</th>
 						<td>Transform code using desing patterns</td>
 						<td><div class="btn btn-secondary">Usage Design patterns</div></td>
@@ -305,7 +305,7 @@
 						<td>Sustainable Coding</td>
 					</tr>
 					<tr>
-					<td>33</td>
+						<td>33</td>
 						<th scope="row">[19]</th>
 						<td>Use Program analysis techniques</td>
 						<td><div class="btn btn-secondary">Usage Program analysis techniques</div></td>
@@ -313,7 +313,7 @@
 						<td>Sustainable Coding</td>
 					</tr>
 					<tr>
-					<td>33</td>
+						<td>33</td>
 						<th scope="row">[19]</th>
 						<td>Decorator design pattern, tradeoffs in all stages of software development, energy issues are difficult to discover </td>
 						<td><div class="btn btn-secondary">Power and resources consumption</div></td>
@@ -321,7 +321,7 @@
 						<td>Sustainable Coding</td>
 					</tr>
 					<tr>
-					<td>34</td>
+						<td>34</td>
 						<th scope="row">[1]</th>
 						<td>Polymorphic design</td>
 						<td>
@@ -332,7 +332,7 @@
 						<td>Sustainable Design</td>
 					</tr>
 					<tr>
-					<td>35</td>
+						<td>35</td>
 						<th scope="row">[2]</th>
 						<td>Proper requirement engineering </td>
 						<td><div class="btn btn-secondary">Requirement Engineering</div></td>
@@ -340,7 +340,7 @@
 						<td>Sustainable Design</td>
 					</tr>
 					<tr>
-					<td>36</td>
+						<td>36</td>
 						<th scope="row">[4][13]</th>
 						<td>Green software design and efficient coding</td>
 						<td>
@@ -351,7 +351,7 @@
 						<td>Sustainable Design</td>
 					</tr>
 					<tr>
-					<td>37</td>
+						<td>37</td>
 						<th scope="row">[4][13]</th>
 						<td>Green economy</td>
 						<td><div class="btn btn-secondary">Economy</div></td>
@@ -359,7 +359,7 @@
 						<td>Sustainable Economy</td>
 					</tr>
 					<tr>
-					<td>38</td>
+						<td>38</td>
 						<th scope="row">[16]</th>
 						<td>High costs for sustainable development</td>
 						<td><div class="btn btn-secondary">Monetary cost</div></td>
@@ -367,7 +367,7 @@
 						<td>Sustainable Economy</td>
 					</tr>
 					<tr>
-					<td>39</td>
+						<td>39</td>
 						<th scope="row">[1]</th>
 						<td>Minimal documentation</td>
 						<td><div class="btn btn-secondary">Documentation</div></td>
@@ -375,7 +375,7 @@
 						<td>Sustainable Process</td>
 					</tr>
 					<tr>
-					<td>40</td>
+						<td>40</td>
 						<th scope="row">[1]</th>
 						<td>Continuous validation</td>
 						<td><div class="btn btn-secondary">Software Validation</div></td>
@@ -383,7 +383,7 @@
 						<td>Sustainable Process</td>
 					</tr>
 					<tr>
-					<td>41</td>
+						<td>41</td>
 						<th scope="row">[2]</th>
 						<td>Consistently measured, assessed and enhanced </td>
 						<td><div class="btn btn-secondary">Measurement and assessment</div></td>
@@ -391,7 +391,7 @@
 						<td>Sustainable Process</td>
 					</tr>
 					<tr>
-					<td>42</td>
+						<td>42</td>
 						<th scope="row">[3]</th>
 						<td>Insufficient system documentation</td>
 						<td><div class="btn btn-secondary">Documentation</div></td>
@@ -399,7 +399,7 @@
 						<td>Sustainable Process</td>
 					</tr>
 					<tr>
-					<td>43</td>
+						<td>43</td>
 						<th scope="row">[3]</th>
 						<td>Limited support for real-time systems and large systems</td>
 						<td><div class="btn btn-secondary">Support for real-time and large systems</div></td>
@@ -407,7 +407,7 @@
 						<td>Sustainable Process</td>
 					</tr>
 					<tr>
-					<td>44</td>
+						<td>44</td>
 						<th scope="row">[3]</th>
 						<td>Management overhead</td>
 						<td><div class="btn btn-secondary">Management overhead</div></td>
@@ -415,7 +415,7 @@
 						<td>Sustainable Process</td>
 					</tr>
 					<tr>
-					<td>45</td>
+						<td>45</td>
 						<th scope="row">[3]</th>
 						<td>Lack of customer’s presence</td>
 						<td><div class="btn btn-secondary">Customer presence</div></td>
@@ -423,7 +423,7 @@
 						<td>Sustainable Process</td>
 					</tr>
 					<tr>
-					<td>46</td>
+						<td>46</td>
 						<th scope="row">[3]</th>
 						<td>Insufficient knowledge of the customer</td>
 						<td><div class="btn btn-secondary">Customer knowledge</div></td>
@@ -431,7 +431,7 @@
 						<td>Sustainable Process</td>
 					</tr>
 					<tr>
-					<td>47</td>
+						<td>47</td>
 						<th scope="row">[4][13]</th>
 						<td>Low carbon emission throughout the software development process</td>
 						<td><div class="btn btn-secondary">Carbon emission</div></td>
@@ -439,7 +439,7 @@
 						<td>Sustainable Process</td>
 					</tr>
 					<tr>
-					<td>48</td>
+						<td>48</td>
 						<th scope="row">[4][13]</th>
 						<td>Sustainable maintenance of the software</td>
 						<td><div class="btn btn-secondary">Software Maintenance</div></td>
@@ -447,7 +447,7 @@
 						<td>Sustainable Process</td>
 					</tr>
 					<tr>
-					<td>49</td>
+						<td>49</td>
 						<th scope="row">[4][13]</th>
 						<td>Sustainable testing</td>
 						<td><div class="btn btn-secondary">Software test</div></td>
@@ -455,7 +455,7 @@
 						<td>Sustainable Process</td>
 					</tr>
 					<tr>
-					<td>50</td>
+						<td>50</td>
 						<th scope="row">[4][13]</th>
 						<td>Use of agile strategies</td>
 						<td><div class="btn btn-secondary">Use of agile strategies</div></td>
@@ -463,7 +463,7 @@
 						<td>Sustainable Process</td>
 					</tr>
 					<tr>
-					<td>51</td>
+						<td>51</td>
 						<th scope="row">[4][13]</th>
 						<td>Software flexibility and legacy systems support</td>
 						<td>
@@ -474,7 +474,7 @@
 						<td>Sustainable Using</td>
 					</tr>
 					<tr>
-					<td>52</td>
+						<td>52</td>
 						<th scope="row">[16]</th>
 						<td>Lacking motivation for sustainable development</td>
 						<td><div class="btn btn-secondary">Motivation for sustainable development</div></td>
@@ -482,7 +482,7 @@
 						<td>Team Motivation</td>
 					</tr>
 					<tr>
-					<td>53</td>
+						<td>53</td>
 						<th scope="row">[1]</th>
 						<td>Efficient utilization of time and computing resources</td>
 						<td><div class="btn btn-secondary">Power and resources consumption</div></td>
@@ -490,7 +490,7 @@
 						<td>Technical Excellence</td>
 					</tr>
 					<tr>
-					<td>54</td>
+						<td>54</td>
 						<th scope="row">[19]</th>
 						<td>Bad use of Programming languages, runtime scope of android-based systems, video quality level, sorting algorithms, video compression strategies, using libraries and frameworks, compiler optimization flags, data structures, web server, web application features, PHP frameworks, program size, using cache</td>
 						<td>
@@ -500,7 +500,7 @@
 						<td>Technical Excellence</td>
 					</tr>
 					<tr>
-					<td>55</td>
+						<td>55</td>
 						<th scope="row">[2]</th>
 						<td>Use of online forms and questionnaires</td>
 						<td><div class="btn btn-secondary">Online forms and questionnaire usage</div></td>
@@ -508,7 +508,7 @@
 						<td>Tools</td>
 					</tr>
 					<tr>
-					<td>56</td>
+						<td>56</td>
 						<th scope="row">[4][13]</th>
 						<td>Use of cloud for software distribution</td>
 						<td><div class="btn btn-secondary">Cloud for software distributions usage</div></td>
@@ -516,7 +516,7 @@
 						<td>Tools</td>
 					</tr>
 					<tr>
-					<td>57</td>
+						<td>57</td>
 						<th scope="row">[19]</th>
 						<td>Improve usability of: recommender system, carbon footprint calculator. Using UI-based design techniques</td>
 						<td><div class="btn btn-secondary">Recommender system and carbon footprints calculators usage</div></td>
@@ -524,7 +524,7 @@
 						<td>Tools</td>
 					</tr>
 					<tr>
-					<td>58</td>
+						<td>58</td>
 						<th scope="row">[19]</th>
 						<td>Practices for enhancing performance of mobile devices, compressing file streams, memoization techniques, filtering ads in mobile web-based systems, energy-aware libraries</td>
 						<td><div class="btn btn-secondary">Power and resources consumption</div></td>
@@ -532,7 +532,7 @@
 						<td>Tools</td>
 					</tr>
 					<tr>
-					<td>59</td>
+						<td>59</td>
 						<th scope="row">[4][13]</th>
 						<td>E-waste management</td>
 						<td><div class="btn btn-secondary">E-waste</div></td>
@@ -540,7 +540,7 @@
 						<td>Waste</td>
 					</tr>
 					<tr>
-					<td>60</td>
+						<td>60</td>
 						<th scope="row">[4][13]</th>
 						<td>Green application development environment </td>
 						<td><div class="btn btn-secondary">Application development environment</div></td>
@@ -549,6 +549,8 @@
 					</tr>
 				</tbody>
 			</table>
+			
+			<a href="index.html" class="btn btn-warning">Return to index</a>
 			<a href="reference.html" class="btn btn-warning" style="margin: 20px">See references</a>
 			<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
