--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
       </tr>
       <tr>
         <td>References</td>
-        <td>Table containing full references</td>
-        <td><a href="RQ1.html">Link</a></td>
+        <td>Table of references</td>
+        <td><a href="index.html">Link</a></td>
       </tr>
     </table>
 
