--- a/V2/RQ1-definitions.html
+++ b/V2/RQ1-definitions.html
@@ -37,12 +37,12 @@
       </thead>
       <tbody>
         <tr>
-          <th scope="row" style="vertical-align: middle;">[1][4][5][7][11][14][18][19][20]</th>
-          <td style="text-align: justify;">Sustainable software is software whose direct and indirect negative impacts on economy, society, human beings, and the environment resulting from development, and usage of the software is minimal and/or has positive effect on sustainable development and post‐development phases are negligible and/or which have a positive impact on sustainable production.</td>
+          <th scope="row" style="vertical-align: middle;">[1][3][4][5][7][11][14][18][19][20]</th>
+          <td style="text-align: justify;">Sustainable software is software whose direct and indirect negative impacts on economy, society, human beings, and the environment resulting from development, and usage of the software is minimal and/or has positive effect on sustainable development and post‐development phases are negligible and/or which have a positive impact on sustainable production. </td>
           <td>
             <div class="btn btn-primary">Production</div>
           </td>
-          <td><div class="btn btn-danger"> Negative effects on economy, society, individuals, and environment</div></td>
+          <td><div class="btn btn-danger"> Negative effects on economy, society, individuals, and environment </div></td>
         </tr>
         <tr>
           <th scope="row" style="vertical-align: middle;">[4][5][20]</th>
@@ -114,15 +114,6 @@
             <td></td>
           </tr>
           <tr>
-            <th scope="row" style="vertical-align: middle;">[3]</th>
-            <td style="text-align: justify;">Sustainable software is a software that are produced and mantained with a minimun of natural resources and minimizes the negative impacts on human work.</td>
-            <td></td>
-            <td>
-              <div style="margin-bottom: 5px" class="btn btn-danger">Natural resources usage</div>
-              <div class="btn btn-danger">Negative effects on human work</div>
-            </td>
-          </tr>
-          <tr>
             <th scope="row" style="vertical-align: middle;">[8]</th>
             <td style="text-align: justify;">Green or Sustainable Software is a software that follow software development process where practical application of sustainability aspects takes place. For instance, software that complies with customer software requirements causing less changes during it scope.</td>
             <td></td>
@@ -175,6 +166,16 @@
                 <div style="margin-bottom: 5px" class="btn btn-primary">Lifetime</div>
                 <div style="margin-bottom: 5px" class="btn btn-primary">Adaptability</div>
                 <div style="margin-bottom: 5px" class="btn btn-primary">Architecture quality</div>
+              </td>
+              <td></td>
+            </tr>
+            <tr>
+              <th scope="row" style="vertical-align: middle;">[22][23]</th>
+              <td style="text-align: justify;">Sustainability refers 'to capacity to endure' while sustainable software refers to the software that can be continuously assessable, documented and maintainable.</td>
+              <td>
+                <div style="margin-bottom: 5px" class="btn btn-primary">Assessability</div>
+                <div style="margin-bottom: 5px" class="btn btn-primary">Documentation Quality</div>
+                <div style="margin-bottom: 5px" class="btn btn-primary">Maintainability</div>
               </td>
               <td></td>
             </tr>
