--- a/V2/RQ1.1-resources.html
+++ b/V2/RQ1.1-resources.html
@@ -57,7 +57,7 @@
 			</thead>
 			<tbody>
 				<tr>
-					<td>Electric&nbsp;&nbsp;&nbsp;Energy</td>
+					<td>Electric Energy</td>
 					<td>x</td>
 					<td>x</td>
 					<td>x</td>
@@ -111,7 +111,7 @@
 					<td> </td>
 				</tr>
 				<tr>
-					<td>Human&nbsp;&nbsp;&nbsp;resources</td>
+					<td>Human resources</td>
 					<td> </td>
 					<td>x</td>
 					<td>x</td>
@@ -138,7 +138,7 @@
 					<td> </td>
 				</tr>
 				<tr>
-					<td>Production&nbsp;&nbsp;&nbsp;time</td>
+					<td>Production time</td>
 					<td>x</td>
 					<td> </td>
 					<td>x</td>
@@ -158,33 +158,6 @@
 					<td> </td>
 					<td>x</td>
 					<td> </td>
-					<td> </td>
-					<td> </td>
-					<td> </td>
-					<td> </td>
-					<td> </td>
-				</tr>
-				<tr>
-					<td>E-waste</td>
-					<td> </td>
-					<td> </td>
-					<td> </td>
-					<td> </td>
-					<td>x</td>
-					<td> </td>
-					<td> </td>
-					<td> </td>
-					<td>x</td>
-					<td> </td>
-					<td> </td>
-					<td> </td>
-					<td> </td>
-					<td> </td>
-					<td> </td>
-					<td> </td>
-					<td> </td>
-					<td> </td>
-					<td>x</td>
 					<td> </td>
 					<td> </td>
 					<td> </td>
