--- a/index.html
+++ b/index.html
@@ -83,28 +83,28 @@
         </tr>
         <tr>
           <td>RQ1</td>
-          <td>Definitions of sustainable software from the literature</td>
+          <td>Understandings about sustainable software systems</td>
           <td><a href="view/RQ1-understandings.html">Link</a></td>
         </tr>
         <tr>
           <td>RQ2</td>
-          <td>Resources used to produce sustainable software</td>
+          <td>Resources taken into account when considering sustainability in software systems</td>
           <td><a href="view/RQ2-resources.html">Link</a></td>
         </tr>
         <tr>
           <td>RQ3</td>
-          <td>Success and Risk factors and their classification</td>
+          <td>Critical factors for sustainable software systems</td>
           <td><a href="view/RQ3-criticalfactors.html">Link</a></td>
         </tr>
 
         <tr>
-          <td>RQ4</td>
-          <td>Approaches proposed to sustainable software</td>
+          <td>RQ4.1</td>
+          <td>Means to leverage the development of sustainable software systems (Approaches)</td>
           <td><a href="view/RQ4.1-approaches.html">Link</a></td>
         </tr>
         <tr>
-          <td>RQ4</td>
-          <td>Guidelines to construct a sustainable software</td>
+          <td>RQ4.2</td>
+          <td>Guidelines to build a sustainable software systems</td>
           <td><a href="view/RQ4.2-guidelines.html">Link</a></td>
         </tr>
         <tr>
