--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </p>   
       </div>
 
-      <h2 class="jumbotron" style="text-align: center">Replication package</h2>
+      <h2 id="ReplicationPackage" class="jumbotron" style="text-align: center">Replication package</h2>
 
       <p>Systematic Literature Reviews process need to be transparent, facilitate the access to data, consequently, enhance the reproducibility and auditability. Therefore, the selection of primary studies selection, data extraction and data analysis spreadsheets are also available on the link:</p>
       <ul>
