--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   </nav>
   <body>
     <div class="container">
-      <h1 class="jumbotron" style="text-align:center; margin-top:2em"> Sustainable Software Systems: The Core Characteristics and Their Achievement</h1>
+      <h1 class="jumbotron jumbotron-fluid display-4" style="font-size: 2.5em;text-align:center; margin-top:2.5em"> Sustainable Software Systems: The Core Characteristics and Their Achievement</h1>
       <div style="margin: 40px; text-align: justify;" >
         <p>
           <p><b>Context:</b> Sustainability is a cross-disciplinary research topic that has drawn attention from various knowledge areas, such as ecology, engineering, healthcare, and social sciences, and has supported the development of a more sustainable and modern world. Computer science area has also explored such a topic aiming at creating sustainable software systems.</p>
